force-app/main/default/objects/cogn__Cognism_Company__c/cogn__Cognism_Company__c.object-meta.xml
<CustomObject>
    <label>Cognism Company</label>
    <nameField>
        <label>Cognism Company Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cognism Companies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>