force-app/main/default/objects/cogn__Cognism_Company__c/fields/cogn__Categories__c.field-meta.xml
<CustomField>
    <fullName>cogn__Categories__c</fullName>
    <label>Categories</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>