force-app/main/default/objects/cogn__Cognism_Company__c/fields/cogn__City__c.field-meta.xml
<CustomField>
    <fullName>cogn__City__c</fullName>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>