force-app/main/default/objects/cogn__Cognism_Company__c/fields/cogn__Cognism_Id__c.field-meta.xml
<CustomField>
    <fullName>cogn__Cognism_Id__c</fullName>
    <label>Cognism Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>