force-app/main/default/objects/cogn__Cognism_Company__c/fields/cogn__Crunchbase__c.field-meta.xml
<CustomField>
    <fullName>cogn__Crunchbase__c</fullName>
    <label>Crunchbase</label>
    <length>255</length>
    <type>Text</type>
</CustomField>