force-app/main/default/objects/cogn__Cognism_Company__c/fields/cogn__Domain__c.field-meta.xml
<CustomField>
    <fullName>cogn__Domain__c</fullName>
    <label>Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>