force-app/main/default/objects/cogn__Cognism_Company__c/fields/cogn__Facebook__c.field-meta.xml
<CustomField>
    <fullName>cogn__Facebook__c</fullName>
    <label>Facebook</label>
    <length>255</length>
    <type>Text</type>
</CustomField>