force-app/main/default/objects/cogn__Cognism_Company__c/fields/cogn__Industry__c.field-meta.xml
<CustomField>
    <fullName>cogn__Industry__c</fullName>
    <label>Industry</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>