force-app/main/default/objects/cogn__Cognism_Company__c/fields/cogn__Short_Description__c.field-meta.xml
<CustomField>
    <fullName>cogn__Short_Description__c</fullName>
    <label>Short Description</label>
    <type>TextArea</type>
</CustomField>