force-app/main/default/objects/cogn__Cognism_Company__c/fields/cogn__Size_from__c.field-meta.xml
<CustomField>
    <fullName>cogn__Size_from__c</fullName>
    <label>Size from</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>