force-app/main/default/objects/cogn__Cognism_Company__c/fields/cogn__State__c.field-meta.xml
<CustomField>
    <fullName>cogn__State__c</fullName>
    <label>State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>