force-app/main/default/objects/cogn__Cognism_Company__c/fields/cogn__Street__c.field-meta.xml
<CustomField>
    <fullName>cogn__Street__c</fullName>
    <label>Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>