force-app/main/default/objects/cogn__Cognism_Company__c/fields/cogn__Tech__c.field-meta.xml
<CustomField>
    <fullName>cogn__Tech__c</fullName>
    <label>Tech</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>