force-app/main/default/objects/cogn__Cognism_Company__c/fields/cogn__Twitter__c.field-meta.xml
<CustomField>
    <fullName>cogn__Twitter__c</fullName>
    <label>Twitter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>