force-app/main/default/objects/cogn__Cognism_Company__c/fields/cogn__Type__c.field-meta.xml
<CustomField>
    <fullName>cogn__Type__c</fullName>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>