force-app/main/default/objects/cogn__Cognism_Company__c/fields/cogn__Www__c.field-meta.xml
<CustomField>
    <fullName>cogn__Www__c</fullName>
    <label>Www</label>
    <length>255</length>
    <type>Text</type>
</CustomField>