force-app/main/default/objects/cogn__Cognism_Company__c/fields/cogn__Zip__c.field-meta.xml
<CustomField>
    <fullName>cogn__Zip__c</fullName>
    <label>Zip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>